--- a/WyzCS/css/style3.css
+++ b/WyzCS/css/style3.css
@@ -175,6 +175,7 @@ h1 {
     cursor: pointer;
     font-size: 16px;
     display: inline-flex;
+    position: absolute;
     margin-top: 40px;
     align-items: right;
     left: 20px;
